arreglos historial y editar equipos con solicitantes

--- a/src/app/pages/entrega-productos/entrega-productos.page.html
+++ b/src/app/pages/entrega-productos/entrega-productos.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="enhanced-content has-footer-menu" fullscreen="true">
+<ion-content class="enhanced-content has-footer-menu" fullscreen="true" scroll-y="true">
   <!-- Contenedor principal -->
   <div class="main-container">
 
@@ -224,12 +224,6 @@
       </div>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 
 </ion-content>
 
